2007-06-20  Anders Carlsson  <andersca@apple.com>

        Reviewed by Geoff.

		Make sure that the test case tests '\n' and '\r' too.
		
        * fast/dom/xmlhttprequest-invalid-values.html:

2007-06-20  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Beth.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=14056
          REGRESSION (r21113-21143): TR background not repainted via style class change

        * fast/repaint/table-row-expected.checksum: Added.
        * fast/repaint/table-row-expected.png: Added.
        * fast/repaint/table-row-expected.txt: Added.
        * fast/repaint/table-row.html: Added.

2007-06-20  Mark Rowe  <mrowe@apple.com>

        Reviewed by Mitz.

        Test for http://bugs.webkit.org/show_bug.cgi?id=14244
        Bug 14244: Data corruption when using a replace() callback function with data containing "$"

        * fast/js/resources/string-replace-2.js: Update to test with 'replaceValue' being a function returning strings with "$n" placeholders.
        * fast/js/string-replace-2-expected.txt:

2007-06-20  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Adele.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=14040
          Top and bottom border images flipped when using -webkit-border-image when border end up tiled

        * fast/borders/border-image-01-expected.checksum: Added.
        * fast/borders/border-image-01-expected.png: Added.
        * fast/borders/border-image-01-expected.txt: Added.
        * fast/borders/border-image-01.html: Added.
        * fast/borders/resources/border-image.png: Added.

2007-06-20  Anders Carlsson  <andersca@apple.com>

		Remove the XPath tests, they all pass now.
		
        * win/Skipped:

2007-06-19  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Fixed up these tests because they broke the bot.
        
        - Removed reliance on suppressConsoleMessages because I never checked